[project]
name = "olivos"
version = "0.11.48"
description = "OlivOS - Witness Union"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "OlivOS-Team", email = "lunzhipenxil@gmail.com"},
]
license = {text = "AGPL-3.0"}
classifiers=[
    'Operating System :: OS Independent',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Programming Language :: Python :: 3'
]
dependencies = [
    "aiohttp>=3.10.11",
    "brotli>=1.1.0",
    "certifi>=2024.8.30",
    "filetype>=1.2.0",
    "flask>=2.2.5",
    "gevent>=24.2.1",
    "grpcio>=1.68.1",
    "grpcio-tools>=1.68.1",
    "httpx>=0.28.1",
    "js2py>=0.74",
    "lxml>=5.3.0",
    "openpyxl>=3.1.5",
    "pillow==9.3.0",
    "prompt-toolkit>=3.0.48",
    "protobuf>=5.29.1",
    "psutil>=6.1.0",
    "pybase64>=1.4.0",
    "pyinstaller>=6.11.1",
    "pyjson5>=1.6.7",
    "pystray>=0.19.5",
    "pywebview>=5.3.2",
    "pypiwin32; sys_platform == 'win32'",
    "pyyaml>=6.0.2",
    "qrcode>=7.4.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "rich>=13.9.4",
    "rsa>=4.9",
    "websocket-client>=1.8.0",
    "websockets>=13.1",
    "werkzeug==2.2.2",
]

[project.urls]
homepage = "https://github.com/OlivOS-Team/OlivOS"
repository = "https://github.com/OlivOS-Team/OlivOS"
documentation = "https://github.com/OlivOS-Team/OlivOS"

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["/OlivOS"]

# [project.scripts]
# ovo = "OlivOS.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "nox>=2024.10.9",
    "ruff>=0.8.2",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.black]
target-version = ["py39", "py310", "py311"]